# no-more-sql

./: README.md  pyproject.toml
code/: faiss_indexing_retrieval.py  main.py  scripts.py
