[project]
name = "no-more-sql"
version = "0.1.0"
description = "Your project description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.9.0",
    "pandas==2.2.3",
    "numpy==2.1.2",
    "sentence-transformers==3.1.1",
    "streamlit==1.39.0",
    "ollama==0.3.3",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "transformers==4.45.2",
    "datasets==3.0.1",
    "accelerate==1.0.0",
    "peft==0.13.1"
]

[project.optional-dependencies]
dev = ["ipykernel==6.29.4"]

[tool.poetry]
name = "no-more-sql"
version = "0.1.0"
description = "Your project description here"

